--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
-    "name": "shapeshift",
-    "version": "1.0.0",
-    "description": "",
-    "type": "module",
-    "main": "index.ts",
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-
-      "cohere-ai": "^7.8.0",
-      "axios": "^1.7.2",
-      "openai": "^4.8.0"
-    }
-  }
-  
+  "name": "@rectanglehq/shapeshift",
+  "version": "1.0.0",
+  "description": "Shapeshift is a TypeScript library that maps arbitrarily structured JSON objects using vector embeddings. It uses semantic similarity to match keys between objects, allowing for flexible and intelligent object transformation, including support for nested structures.",
+  "type": "module",
+  "main": "index.ts",
+  "author": "Marvin Kennis",
+  "license": "MIT",
+  "dependencies": {
+    "cohere-ai": "^7.8.0",
+    "axios": "^1.7.2",
+    "openai": "^4.8.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rectangleai/Shapeshift.git"
+  },
+  "keywords": [
+    "Map",
+    "JSON",
+    "objects",
+    "structure",
+    "vector",
+    "embeddings"
+  ],
+  "bugs": {
+    "url": "https://github.com/rectangleai/Shapeshift/issues"
+  },
+  "homepage": "https://github.com/rectangleai/Shapeshift#readme"
+}
